--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
 }
 body {
     background-color: #d6e1f0;
+    min-height: 100vh;
 }
 #mainContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 .secondaryContainer {
     display: flex;
@@ -36,9 +37,4 @@ p {
     font-size: 0.9rem;
     color: grey;
     font-weight: 300;
-}
-@media only screen and (max-width: 600px) {
-    #mainContainer {
-        height: 70vh;
-    }
 }
